@@ -1,3 +1,5 @@
+HEAD
+	+ Add asString option to proxySettings method
 3.0.14
 	+ Disable TCP offloading for eth0
 3.0.11
